--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,15 @@
 	</parent>
 
 	<groupId>com.SocialMedia</groupId>
-	<artifactId>Social-Media</artifactId>
+	<artifactId>SocialApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Social-Media</name>
 	<description>Social Media Project</description>
 
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>adarshsingh88</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
