--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
 		<version>3.4.3</version>
 		<relativePath/>
 	</parent>
-
 	<groupId>com.SocialMedia</groupId>
 	<artifactId>SocialApp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -27,7 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
