mail sender is disabled

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,8 +10,8 @@ data:
 mail:
   host: smtp.gmail.com
   port: 587
-  username: ${MAIL_USERNAME}
-  password: ${MAIL_PASSWORD}
+  username: ${novatech273013@gmail.com}
+  password: ${khpq rqrx iusv vfmn}
   properties:
     mail:
       smtp:
