--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,26 +1,23 @@
 spring:
-application:
-  name: Social-Media
-
-data:
-  mongodb:
-    uri: ${MONGO_URI}
-    auto-index-creation: true
-
-mail:
-  host: smtp.gmail.com
-  port: 587
-  username: ${novatech273013@gmail.com}
-  password: ${khpq rqrx iusv vfmn}
-  properties:
-    mail:
-      smtp:
-        auth: true
-        starttls:
-          enable: true
-
+  application:
+    name: Social-Media
+  data:
+    mongodb:
+      uri: ${MONGO_URI}
+      auto-index-creation: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 server:
-  port: ${PORT:8080}
+  port: ${PORT}
   servlet:
     context-path: /social
 
